# crm-simples

./: .env.docs.example  .env.example  .gitignore  README.md  docker-compose.yml  package.json
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  setup.py
backend/app/: main.py
backend/app/api/: dependencies.py
backend/app/api/routes/: atividades.py  auth.py  clientes.py  contatos.py  dashboard.py  empresas.py  funis.py  oportunidades.py  perfis.py
backend/app/core/: config.py  exceptions.py  logging.py  security.py
backend/app/repositories/: atividade_repository.py  cliente_repository.py  contato_repository.py  empresa_repository.py  funil_repository.py  oportunidade_repository.py  perfil_repository.py
backend/app/schemas/: atividades.py  auth.py  clientes.py  contatos.py  dashboard.py  empresas.py  funis.py  oportunidades.py  perfis.py
backend/app/services/: auth_service.py  reference_validation_service.py
backend/app/utils/: validators.py
backend/tests/: conftest.py  test_atividades.py  test_auth.py  test_backend_fixes.py  test_clientes.py  test_live_schema_compatibility.py  test_oportunidades.py  test_permissoes.py  test_reference_validation_service.py
docs/: manual-operacional.md  manual-operacional.pdf.sha256
frontend/: .dockerignore  Dockerfile  README.md  next.config.ts  package-lock.json  package.json  proxy.ts  vitest.config.ts
frontend/app/: error.tsx  (+4 more)
scripts/: build-manual.sh  capture-manual.cjs  dev.sh
supabase/: README.md  audit_schema_rls.sql  fix_auth_function_grants.sql
(+81 files in other folders)
